--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "d3",
     "d3-module"
   ],
+  "author": "Mihael Ankerst",
+  "homepage": "https://github.com/EE2dev/d3-foo",
   "license": "BSD-3-Clause",
   "main": "build/d3-foo.js",
   "jsnext:main": "index",
-  "homepage": "https://github.com/{USERNAME}/d3-foo",
   "repository": {
     "type": "git",
-    "url": "https://github.com/{USERNAME}/d3-foo.git"
+    "url": "https://github.com/EE2dev/plugin-test.git"
   },
   "scripts": {
     "pretest": "rollup -c",
@@ -32,5 +33,8 @@
     "tap-spec": "^5.0.0",
     "tape": "^4.10.2",
     "uglify-js": "^3.6.0"
+  },
+  "dependencies": {
+    "d3": "^5.15.0"
   }
 }
